--- a/code/mpdemo1010/src/main/resources/application.properties
+++ b/code/mpdemo1010/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 
+#环境设置：dev、test、prod
+spring.profiles.active=dev
+#mybatis日志
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
