创建了 service_oss

--- a/code/guli_parent/service/pom.xml
+++ b/code/guli_parent/service/pom.xml
@@ -5,6 +5,7 @@
     <modules>
         <module>service_vod</module>
         <module>service_edu</module>
+        <module>service_oss</module>
     </modules>
     <parent>
         <artifactId>guli_parent</artifactId>
