完成 nginx.conf 配置
如果你的 nginx 版本为 1.2.0 ，直接复制此文件即可

--- a/environment/nginx.conf
+++ b/environment/nginx.conf
@@ -33,7 +33,7 @@ http {
     #gzip  on;
 
     server {
-        listen       80;
+        listen       81;
         server_name  localhost;
 
         #charset koi8-r;
@@ -115,4 +115,15 @@ http {
     #    }
     #}
 
+    server {
+        listen       9001;
+        server_name  localhost;
+
+        location ~ /eduservice/ {
+            proxy_pass http://localhost:8001;
+        }
+        location ~ /eduoss/ {
+            proxy_pass http://localhost:8002;
+        }
+    }
 }
