--- a/environment/nginx.conf
+++ b/environment/nginx.conf
@@ -125,5 +125,8 @@ http {
         location ~ /eduoss/ {
             proxy_pass http://localhost:8002;
         }
+        location ~ /eduvod/ {
+            proxy_pass http://localhost:8003;
+        }
     }
 }
