--- a/startFromDay05/guli_parent/service/service_cms/pom.xml
+++ b/startFromDay05/guli_parent/service/service_cms/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service-cms</artifactId>
+    <artifactId>service_cms</artifactId>
 
 
 </project>
