--- a/environment/nginx.conf
+++ b/environment/nginx.conf
@@ -129,5 +129,8 @@ http {
         location ~ /eduvod/ {
             proxy_pass http://localhost:8003;
         }
+        location ~ /educms/ {
+            proxy_pass http://localhost:8004;
+        }
     }
 }
