导入 alibaba 短信依赖

--- a/startFromDay05/guli_parent/service/service_msm/pom.xml
+++ b/startFromDay05/guli_parent/service/service_msm/pom.xml
@@ -11,5 +11,15 @@
 
     <artifactId>service_msm</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-core</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
