--- a/startFromDay05/guli_parent/service/service_msm/src/main/resources/application.properties
+++ b/startFromDay05/guli_parent/service/service_msm/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/guli?serverTimezone=GMT%2B8&ch
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.redis.host=192.168.44.132
+spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.database= 0
 spring.redis.timeout=1800000
