在 nginx.conf 中配置了 edumsm

--- a/environment/nginx.conf
+++ b/environment/nginx.conf
@@ -132,5 +132,8 @@ http {
         location ~ /educms/ {
             proxy_pass http://localhost:8004;
         }
+        location ~ /edumsm/ {
+            proxy_pass http://localhost:8005;
+        }
     }
 }
