--- a/startFromDay05/front/vue-front-1010/package.json
+++ b/startFromDay05/front/vue-front-1010/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "element-ui": "^2.14.1",
     "nuxt": "^2.0.0",
     "vue-awesome-swiper": "^3.1.3"
   },
