在 nginx.conf 中配置了 edumsm

--- a/environment/nginx.conf
+++ b/environment/nginx.conf
@@ -135,5 +135,8 @@ http {
         location ~ /edumsm/ {
             proxy_pass http://localhost:8005;
         }
+        location ~ /educenter/ {
+            proxy_pass http://localhost:8006;
+        }
     }
 }
