--- a/startFromDay05/front/vue-front-1010/package.json
+++ b/startFromDay05/front/vue-front-1010/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "element-ui": "^2.14.1",
+    "js-cookie": "^2.2.1",
     "nuxt": "^2.0.0",
     "vue-awesome-swiper": "^3.1.3",
     "vue-qriously": "^1.1.1",
